@@ -1,2 +1,5 @@
 #!/bin/bash
-java -Xms2G -Xmx3G -jar paper.jar --nogui
+RAM_MIN="6G"
+RAM_MAX="8G"
+
+exec java -Xms$RAM_MIN -Xmx$RAM_MAX -XX:+UseZGC -jar paper.jar --nogui
